Make a plugin instead of due_at_string

--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -12,6 +12,9 @@
     <%= f.text_area :body %>
   </p>
   <p>
+    <%= f.text_field :due_at_string %>
+  </p>
+  <p>
     <%= f.submit 'Update' %>
   </p>
 <% end %>
